# HIS

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/: open_situational_test.json  personality_scale.json  profession_scale.json
code/llama2_finetune/: custom_dataset.py  moe_lora_finetune.py
code/llama2_finetune/moe_lora_llama/: custom_dataset.py  model_load.py  moe_lora.py
code/llama2_inference/: gpt.py  gpt_interviewer.py  inference.py  load_full_model.py  scale_eval_in_dialog.py  situation_dialog.py
code/llama2_inference/moe_lora_llama/: moe_lora.py
code/llama2_inference/scales/: remove_empty_scales.py
data/: test.json
human_evaluation/: data_sample50.csv  open_sample10_320.csv  scale_sample50.csv
prompts/: benchmark_examples.json  data_generation_prompts.json  role_prompt_template.json
src/his/data/: dataset.py
src/his/evaluation/: scale_eval.py  situation_dialog.py
src/his/evaluation/scales/: calculate_scale_results.py
src/his/inference/: inference_cli.py  load_full_model.py  prompts.py
src/his/models/: moe_lora.py
src/his/training/: train_moe_lora.py
