[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "his"
version = "0.1.0"
description = "Identity-driven hierarchical role-playing agents"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
